test/Fail/Issue4373/A.agda

module Issue4373.A where

postulate
  T : Set
  instance t : T
